app/assets/stylesheets/application.scss
/* ... */
header nav .nav-wrap-head a.menu-button-close {
  align-self: flex-end;
  display: block;
  cursor: pointer;
  height: 26px;
  position: relative;
  width: 26px;
  @include rotate(45);
}
header nav .nav-wrap-head a.menu-button-close:hover span {
  border-color: $red;
}
header nav .nav-wrap-head a.menu-button-close span {
  border: 1px solid $black;
  display: block;
  position: absolute;
  left: 0;
  top: 50%;
  width: 24px;
  //@include rotate(45);
}
header nav .nav-wrap-head a.menu-button-close span:last-child {
  left: 0%;
  @include rotate(90);
}
header nav .nav-wrap-head {
  //display: fixed;
  //align-items: center;
  display: none;
  //gap: 0 20px;
  //transition: transform 330ms ease-in-out;
}
header nav .nav-wrap-head a.account {
  align-items: center;
  column-gap: 14px;
  cursor: pointer;
  display: grid;
  grid-template-columns: 80px auto 20px;
  //justify-content: space-between;
  margin-bottom: 20px;
  width: 100%;
}
header nav .nav-wrap-head a.account figure {
  //border: 2px solid $black;
  height: 80px;
  overflow: hidden;
  position: relative;
  width: 80px;
  @include rounded(50px);
}
header nav .nav-wrap-head a.account figure picture {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}
header nav .nav-wrap-head a.account figure picture img {
  object-fit: cover;
}
header nav .nav-wrap-head a.account .name {
  font-family: $general;
  font-size: em(18,28);
  font-weight: $semibold;
  line-height: em(26,18);
}
header nav .mobile-buttons-nav {
  display: flex;
  flex-direction: column;
  gap: 20px 0;
}
header nav .mobile-buttons-nav a.button {

}


// Desktop
header nav .nav-wrap-head a {
  //color: $black;
  //font-family: $general;
  //font-size: em(16,16);
  //font-weight: $medium;
  //line-height: em(16,16);
  //@include transition(all);
}





header nav .nav-wrap-head {
  //align-items: center;
  //display: none;
  //gap: 0 20px;
}
header nav .nav-wrap-head a {
  color: $black;
  font-family: $general;
  font-size: em(28,16);
  font-weight: $medium;
  line-height: em(28,28);
  @include transition(all);
}
header nav .nav-wrap-head a:hover {
  color: $red;
}
header nav a.nav-logo {
  fill: $black;
  width: 66px;
  overflow: visible;
  @include transition(all);
}
header nav a.nav-logo .hand {
  @include transition(all);
}
header nav a.nav-logo:hover .hand {
  fill: $red;
}
header nav .buttons-con {
  //align-content: center;
  align-items: center;
  display: flex;
  column-gap: calc(4% + 2px);
  justify-content: flex-end;
  flex-direction: row;
  flex-wrap: nowrap;
  width: 100%;
}
header nav a.search {
  stroke: $black;
  @include transition(all);
}
header nav a.search:hover {
  stroke: $red;
}
header nav a.login {
  stroke: $black;
  @include transition(all);
}
header nav a.login:hover {
  stroke: $red;
}
header nav a.login .logged {
  display: none;
  @include transition(all);
}
header nav a.add-button {
  align-items: center;
  background: $red;
  color: $white;
  display: flex;
  flex-wrap: nowrap;
  font-family: $general;
  font-size: em(12,16);
  font-weight: $medium;
  line-height: em(12,12);
  padding: 13px 14px;
  text-align: center;
  @include rounded(19px);
  @include transition(all);
}
header nav a.add-button:hover {
  background: $black;
}
header nav a.menu-button {
  cursor: pointer;
  display: flex;
  flex-direction: column;
  gap: 6px;
  @include transition(all);
}
header nav a.menu-button:hover span {
  border-color: $red;
}
header nav a.menu-button span {
  border: 1px solid $black;
  display: block;
  width: 22px;
  @include transition(all);
}



header nav .nav-con-main {
  display: none;
}

header nav .language {
  display: none;
}





// Main
section.main {
  display: grid;
  gap: 40px 0;
}
section.main .report-suggestion-block {
  background: $green;
  display: grid;
  gap: 30px 0;
  padding: per(20,280);
  @include rounded(15px);
}
section.main .report-suggestion-block .report-suggestion-con {

}
section.main .report-suggestion-block .title {
  color: $black;
  font-family: $headline;
  font-size: em(30,16);
  font-weight: $extrabold;
  line-height: em(36,30);
}
section.main .report-suggestion-block .subtitle {
  color: $black;
  font-family: $general;
  font-size: em(18,16);
  font-weight: $medium;
  line-height: em(26,18);
  margin-top: 10px;
}
section.main .report-suggestion-block a.button-report-suggestion-block {
  background: $red;
  margin-top: 20px;
  width: 100%;
}
section.main .report-suggestion-block a.button-report-suggestion-block:hover {
  background: $black;
  color: $white;
}
section.main .report-suggestion-block .images-block {
  align-items: center;
  display: flex;
  justify-content: center;
}
section.main .report-suggestion-block .images-block figure {
  width: per(160,240);
}
section.main .how-to-block {
  background: $yellow;
  display: grid;
  gap: 30px 0;
  padding: per(20,280);
  @include rounded(15px);
}
section.main .how-to-block .how-to-con {
  display: grid;
  gap: 30px 0;
}
section.main .how-to-block .title {
  color: $black;
  font-family: $headline;
  font-size: em(30,16);
  font-weight: $extrabold;
  line-height: em(36,30);
}
section.main .how-to-block .subtitle {
  color: $black;
  font-family: $general;
  font-size: em(18,16);
  font-weight: $medium;
  line-height: em(26,18);
  margin-top: 10px;
}
section.main .how-to-block .how-to-button-con {
  align-items: flex-end;
  display: flex;
  fill: $black;
  gap: 0 10px;
  justify-content: flex-end;
}
section.main .how-to-block .how-to-button-con .button-how-to {
  align-items: center;
  background: $white;
  display: flex;
  height: 50px;
  justify-content: center;
  width: 50px;
  @include rounded(50%);
  @include transition(all);
}
section.main .how-to-block .how-to-button-con .button-how-to:hover {
  background: $red;
}
section.main .how-to-block .how-to-button-con .inactive {
  background: rgba(255,255,255, 0.5);
}
section.main .how-to-block .how-to-button-con .inactive:hover {
  background: rgba(255,255,255, 0.5);
}
/* ... */

